fix scrollbar and add margin for mobile screen

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,10 +8,6 @@
 }
 
 @media screen and (min-width: 480px) {
-  .tabs::-webkit-scrollbar {
-    width: 0 !important;
-  }
-
   ::-webkit-scrollbar {
     width: 8px;
   }
@@ -26,5 +22,10 @@
 
   ::-webkit-scrollbar-thumb:hover {
     background: #555;
+  }
+
+  .tabs::-webkit-scrollbar {
+    width: 0 !important;
+    height: 0 !important;
   }
 }
